--- a/第十二天到十五天/homework.html
+++ b/第十二天到十五天/homework.html
@@ -288,8 +288,12 @@
                                 </p>
                             </div>
                             <div id="view-pic">
-                                <img src="images/9.png" alt="">
+                                <i>
+                                    <img src="images/9.png" alt="">
+                                </i>
+                                <i>
                                 <img src="images/10.png" alt="">
+                                </i>
                             </div>
                             <div class="day" id="width">New Messages</div>
                             <div class="b"></div>
@@ -306,8 +310,10 @@
                             </p>
                         </div>
                     </div>
-                    <button class="send-btn"><img src="images/30.png" alt=""></button>
-                    <input type="text" class="send-msg" value="Well, kinda both :) but more of that second option, i`ve seen many systems infected and crawling with">
+                    <div class="bt-in clearfix">
+                        <button class="send-btn"><img src="images/30.png" alt=""></button>
+                        <input type="text" class="send-msg" value="Well, kinda both :) but more of that second option, i`ve seen many systems infected and crawling with">
+                    </div>
                 </div>
             </div>
         </div>
